--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
     <link href='https://fonts.googleapis.com/css?family=Poppins:300,700' rel='stylesheet' type='text/css'>
         <!-- <link rel="stylesheet" type="text/css" href="./assets/font/font-awesome/css/font-awesome.min.css" /> -->
@@ -47,7 +47,7 @@
     -->
 
 
-    <title>React App</title>
+    <title>PT Usadha Bhakti Buana</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
